<resources>
    <string name="app_name">NavigationTest</string>
    <string name="Payment">Payment History</string>
    <string name="Text">ScrollView_text</string>
    <string name="Return">Previous</string>
    <string name="cart">cart</string>
    <string name="text">Profile</string>
    <string name="date">payment date</string>
    <string name="order_summary">order_summary</string>

</resources>