<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/payment_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center"
        android:text="@string/Payment"
        android:textColor="#4E4C4C"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/payment_history"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/oval_rectangle"
        app:queryHint="Search your order"/>

    <ScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/search"
        android:layout_above="@id/bottom_navigation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="#F5B700"
                android:gravity="center"
                android:text="@string/date"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:background="@drawable/oval_rectangle"
                android:text="@string/order_summary"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorYellow"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="52dp"
        android:layout_height="43dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/Return"
        app:srcCompat="@drawable/ic_arrow"
        tools:ignore="VectorDrawableCompat"
        android:layout_marginLeft="30dp"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="49dp"
        android:layout_height="40dp"
        android:layout_marginStart="330dp"
        android:layout_marginLeft="224dp"
        android:contentDescription="@string/cart"
        app:srcCompat="@drawable/ic_cart"
        tools:ignore="VectorDrawableCompat"/>

</RelativeLayout>